--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Leave an anonymous pinpoint of memories for others to discover"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/file.png" />
     <!--
